[package]
name = "doomrakr"
version = "0.1.0"
authors = ["Nick Essenburg <nessenbu@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.x"
rodio = "0.13.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "play"
path = "src/play.rs"
