[package]
name = "doomrakr"
version = "0.1.0"
authors = ["Nick Essenburg <nessenbu@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.x"
chrono = "0.4.x"
rodio = "0.13.0"
json = "0.12.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
